# CodeAnatomy

./: .coverage  .gitignore  .pyre_configuration.local  AGENTS.md  CLAUDE.md  DUAL_LANE_IMPLEMENTATION_SUMMARY.md  PREFLIGHT_IMPLEMENTATION.md  README.md  SCOPE_3_FLOW_DIAGRAM.md  SCOPE_3_IMPLEMENTATION_SUMMARY.md  SCOPE_5_PART_2_IMPLEMENTATION.md  SCOPE_9_SUMMARY.md  cq  index.scip  pyproject.toml  pyrefly.toml  pyrightconfig.json  pytest.ini  test_dual_lane_integration.py  test_preflight.py  test_scope2_implementation.py  verify_implementation.py
rust/: AGENTS.md  Cargo.toml
rust/.claude/agent-memory/architecture-executor/: MEMORY.md
rust/codeanatomy_engine/: Cargo.toml
rust/codeanatomy_engine/.cq_cache/000/: cache.db
rust/codeanatomy_engine/.cq_cache/001/: cache.db
rust/codeanatomy_engine/.cq_cache/002/: cache.db
rust/codeanatomy_engine/.cq_cache/003/: cache.db
rust/codeanatomy_engine/.cq_cache/004/: cache.db
rust/codeanatomy_engine/.cq_cache/005/: cache.db
rust/codeanatomy_engine/.cq_cache/006/: cache.db
rust/codeanatomy_engine/.cq_cache/007/: cache.db
rust/codeanatomy_engine/src/: lib.rs
rust/codeanatomy_engine/tests/: compat_smoke.rs  compile_phases_tests.rs  compiler_tracing_phase_tests.rs  datafusion_python_contract_regressions_tests.rs  end_to_end.rs  graph_validation.rs  interval_align_provider.rs  interval_align_pushdown_tests.rs  join_union_stability.rs  maintenance_execution_tests.rs  materialization_contract_tests.rs  object_store_tracing.rs  optimizer_pipeline.rs  overlay_session_invariance.rs  plan_codec_policy_tests.rs  plan_compilation.rs  plan_utils_tests.rs  planning_surface_enforcement.rs  planning_surface_manifest_v2.rs  planning_surface_policy_tests.rs  policy_parity_hash.rs  provider_pushdown_contract.rs  provider_registration.rs  pushdown_contract_conformance.rs  pushdown_contracts.rs  pushdown_mode_contract_tests.rs  rule_instrumentation_consolidation_tests.rs  rule_instrumentation_phase_mode_tests.rs  rule_registration.rs  rule_tracing_diff.rs  rulepack_classification_tests.rs  scan_config_builder_tests.rs  scheduling.rs  semantic_validation.rs  session_capture_tests.rs  session_determinism.rs  session_identity_golden.rs  spec_contract.rs  spec_helpers_tests.rs  standalone_optimizer_harness.rs  (+4 more)
rust/codeanatomy_engine_py/: Cargo.toml  pyproject.toml
rust/codeanatomy_engine_py/src/: compiler.rs  errors.rs  lib.rs  materializer.rs  result.rs  schema.rs  session.rs
rust/datafusion_ext/: Cargo.toml  lib.rs
rust/datafusion_ext/src/: async_runtime.rs  async_udf_config.rs  compat.rs  config_macros.rs  delta_common.rs  delta_control_plane.rs  delta_maintenance.rs  delta_mutations.rs  delta_observability.rs  delta_protocol.rs  error_conversion.rs  errors.rs  expr_planner.rs  function_factory.rs  function_rewrite.rs  function_types.rs  lib.rs  macros.rs  operator_utils.rs  physical_rules.rs  planner_rules.rs  registry_snapshot.rs  relation_planner.rs  sql_macro_factory.rs  type_planner.rs  udaf_arg_best.rs  udaf_builtin.rs  udf_async.rs  udf_builtin.rs  udf_config.rs  udf_custom.rs  udf_docs.rs  udf_expr.rs  udf_registry.rs  udtf_builtin.rs  udtf_external.rs  udtf_sources.rs  udwf_builtin.rs
rust/datafusion_ext/tests/: async_runtime_install_tests.rs  async_udf_config_tests.rs  delta_common_tests.rs  delta_control_plane_builder_tests.rs  delta_dml_contract_tests.rs  delta_payload_naming_tests.rs  function_types_tests.rs  native_dml_pilot.rs  operator_utils_tests.rs  physical_rule_ordering_tests.rs  registry_capabilities_tests.rs  registry_metadata_tests.rs  registry_snapshot_contract_tests.rs  registry_snapshot_tests.rs  relation_planner_behavior_tests.rs  relation_planner_install_tests.rs  relation_planner_pilot.rs  rule_install_idempotency_tests.rs  type_planner_install_tests.rs  udaf_arg_best_tests.rs  udf_conformance.rs
rust/datafusion_ext_py/: Cargo.toml  pyproject.toml
rust/datafusion_ext_py/src/: lib.rs
rust/datafusion_python/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
rust/datafusion_python/src/: catalog.rs  codeanatomy_ext.rs  context.rs  dataframe.rs  dataset.rs  dataset_exec.rs  delta_control_plane.rs  delta_maintenance.rs  errors.rs  expr.rs  expr_planner.rs  lib.rs  physical_plan.rs  pyo3_utils.rs  sql.rs  store.rs  substrait.rs  udaf.rs  udf.rs  udf_async.rs  udf_builtin.rs  udf_custom.rs  udf_custom_py.rs  udf_docs.rs  udf_registry.rs  udtf.rs  udwf.rs  udwf_builtin.rs  utils.rs
rust/datafusion_python/tests/: adapter_tracing_tests.rs  cache_manager_contract_tests.rs  codeanatomy_ext_cache_tables_tests.rs  codeanatomy_ext_decomposition_tests.rs  codeanatomy_ext_delta_maintenance_tests.rs  codeanatomy_ext_delta_mutations_tests.rs  codeanatomy_ext_delta_provider_tests.rs  codeanatomy_ext_delta_runtime_policy_tests.rs  codeanatomy_ext_helpers_cutover_tests.rs  codeanatomy_ext_helpers_tests.rs  codeanatomy_ext_legacy_decomposition_complete_tests.rs  codeanatomy_ext_plan_bundle_tests.rs  codeanatomy_ext_plugin_bridge_tests.rs  codeanatomy_ext_registry_bridge_tests.rs  codeanatomy_ext_schema_evolution_tests.rs  codeanatomy_ext_schema_pushdown_contract_tests.rs  codeanatomy_ext_session_utils_tests.rs  codeanatomy_ext_udf_contract_tests.rs  codeanatomy_ext_udf_registration_tests.rs  data_type_mapping_tests.rs  delta_session_bridge_tests.rs  docs_bridge_tests.rs  error_helper_contract_tests.rs  expr_variant_conversion_tests.rs  expr_wrapper_macros_tests.rs  factory_policy_tests.rs  plan_bundle_bridge_tests.rs  provider_capsule_contract_tests.rs  rules_bridge_tests.rs  substrait_bridge_tests.rs  upstream_robustness_tests.rs
rust/df_plugin_api/: CHANGELOG.md  Cargo.toml
rust/df_plugin_api/src/: lib.rs  manifest.rs
rust/df_plugin_codeanatomy/: Cargo.toml
rust/df_plugin_codeanatomy/src/: lib.rs  options.rs  providers.rs  task_context.rs  udf_bundle.rs
rust/df_plugin_common/: Cargo.toml
rust/df_plugin_common/src/: lib.rs
rust/df_plugin_common/tests/: parse_major_tests.rs  schema_ipc_tests.rs
rust/df_plugin_host/: Cargo.toml
rust/df_plugin_host/src/: lib.rs  loader.rs  registry_bridge.rs
scripts/: cq  (+38 more)
(+5617 files in other folders)
