[project]
name = "codeanatomy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.12"
dependencies = [
    "pip>=25.3",
    "setuptools>=80.9.0",
    "datafusion>=50.1.0",
    "datafusion_ext>=0.1.0",
    "codeanatomy_engine>=0.1.0",
    "rustworkx>=0.17.1",
    "pyyaml>=6.0.3",
    "protobuf>=6.33.2",
    "grpcio-tools>=1.76.0",
    "grpcio>=1.76.0",
    "tqdm>=4.67.1",
    "pytest-asyncio>=1.3.0",
    "pytest-anyio>=0.0.0",
    "coverage>=7.12.0",
    "cyclopts>=4.4.1",
    "pydeps>=3.0.1",
    "pylint>=4.0.4",
    "graphviz>=0.21",
    "pathspec>=0.12.1",
    "plotly",
    "pyarrow",
    "pydoclint",
    "pydocstyle",
    "pyrefly",
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-logging",
    "pytest-json-report",
    "pytest-xdist>=3.8.0",
    "rich",
    "ruff",
    "tree-sitter",
    "tree-sitter-language-pack",
    "tree-sitter-python>=0.25.0",
    "anyio>=4.11.0",
    "ast-grep-py",
    "asyncio>=4.0.0",
    "basedpyright",
    "cython",
    "docstr-coverage",
    "docstring-parser",
    "libcst",
    "pygit2>=1.19.1",
    "msgspec>=0.20.0",
    "pydantic>=2.10.0",
    "polars>=1.37.1",
    "pandera[polars]>=0.29.0",
    "maturin>=1.11.5",
    "rustup>=1.28.2.1",
    "substrait>=0.26.0",
    "deltalake>=1.3.2",
    "diskcache>=5.6.3",
    "opentelemetry-distro[otlp]>=0.60b1",
    "opentelemetry-instrumentation>=0.60b1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-exporter-prometheus>=0.60b1",
    "opentelemetry-instrumentation-asyncio>=0.60b1",
    "opentelemetry-instrumentation-threading>=0.60b1",
    "opentelemetry-instrumentation-system-metrics>=0.60b1",
    "uuid6>=2025.0.1",
    "tree-sitter-rust>=0.24.0",
    "markdown-it-py>=4.0.0",
    "textual>=7.5.0",
    "textual-dev>=1.8.0",
    "pyre-check>=0.9.25",
]

[project.scripts]
codeanatomy = "cli:main"
codeanatomy-cutover-check = "scripts.check_semantic_compiled_cutover:main"

[tool.uv]
package = true

[tool.uv.sources]
datafusion = { path = "dist/wheels/datafusion-51.0.0-cp310-abi3-macosx_11_0_arm64.whl" }
datafusion_ext = { path = "dist/wheels/datafusion_ext-0.1.0-cp310-abi3-macosx_11_0_arm64.whl" }
codeanatomy_engine = { path = "dist/wheels/codeanatomy_engine-0.1.0-cp310-abi3-macosx_11_0_arm64.whl" }

[tool.ruff]
line-length = 100
target-version = "py313"
required-version = ">=0.14.8"
output-format = "grouped"
src = ["src"]
extend-exclude = ["docs/**", "rust/**"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "PLR6301", "PLC1901", "D103", "D100"]
"tests/integration/test_rust_engine_e2e.py" = ["PLR0914"]
"tests/unit/test_test_env_capabilities.py" = ["PLR0914"]
"tools/cq/cli_app/telemetry.py" = ["BLE001"]
"tools/cq/cli_app/contracts.py" = ["DOC201", "DOC501"]
"tools/cq/core/contract_codec.py" = ["DOC201", "DOC501"]
"tools/cq/core/contracts.py" = ["DOC502"]
"tools/cq/core/contracts_constraints.py" = ["DOC501"]
"tools/cq/core/public_serialization.py" = ["DOC502"]
"tools/cq/core/summary_contracts.py" = ["DOC201"]
"tools/cq/core/typed_boundary.py" = ["DOC501", "DOC502"]
"tools/cq/macros/scan_utils.py" = ["DOC201"]
"tools/cq/macros/scoring_utils.py" = ["DOC201"]
"tools/cq/macros/target_resolution.py" = ["DOC201"]
"tools/cq/search/_shared/*.py" = ["DOC201"]
"tools/cq/search/objects/*.py" = ["DOC201"]
"tools/cq/search/pipeline/*.py" = ["DOC201"]
"tools/cq/search/python/*.py" = ["DOC201"]
"tools/cq/search/rg/*.py" = ["DOC201"]
"tools/cq/search/rust/*.py" = ["DOC201"]
"tools/cq/search/semantic/*.py" = ["DOC201"]
"tools/cq/search/tree_sitter/**/*.py" = ["DOC201"]
"tools/cq/search/tree_sitter/core/query_pack_executor.py" = ["PLR0913"]
"tools/cq/search/tree_sitter/core/runtime.py" = ["PLR0914"]
"tools/cq/search/tree_sitter/python_lane/facts.py" = ["PLR0913", "PLR0914"]
"tools/cq/search/tree_sitter/query/lint.py" = ["PLR0911"]
"tools/cq/search/tree_sitter/rust_lane/injections.py" = ["PLR0913"]
"tools/cq/search/tree_sitter/rust_lane/runtime.py" = ["PLR0913", "PLR0914"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",
    "E4",
    "E7",
    "E9",
    "I",
    "N",
    "UP",
    "SIM",
    "C4",
    "B",
    "RUF",
    "ANN",
    "D",
    "RET",
    "RSE",
    "TRY",
    "EM",
    "G",
    "LOG",
    "ISC",
    "TID",
    "ICN",
    "TD",
    "ERA",
    "PGH",
    "C90",
    "PLR",
    "W",
    "A",
    "ARG",
    "BLE",
    "DTZ",
    "PTH",
    "PIE",
    "PT",
    "T20",
    "PLW",
    "PLC",
    "PERF",
    "YTT",
    "PYI",
    "TC",      # Type-checking imports (typing gates enforcement)
    "SLOT",
    "FBT",
    "SLF",
    "ASYNC",
    "INP",     # Input validation (implicit namespace packages)
    "EXE",     # Executable shebang checks
    "FIX",
    "NPY",
    "PD",
    "PLE",
    "DOC",
]
ignore = ["Q", "E203", "TC001", "TC002", "TC003", "TC004", "N802", "RUF067", "PLC0415", "PLC2701", "ANN401", "E402"]
preview = true
extend-select = ["RUF100", "D401", "D417"]

# Typing gates enforcement: escalate these to errors via explicit config
extend-ignore = []  # Placeholder for potential future ignores
# Note: TC, INP, EXE rules are ERRORS by default; PLC2701 (typing-only import) treated specially per-file

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 12
max-locals = 15
max-returns = 6
max-statements = 50

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]

[tool.pydoclint]
exclude = ""
allow-init-docstring = true  # Project policy: document constructor parameters in __init__ docstrings
ignore-underscore-args = true

[tool.pylint.basic]
# ignore only dunder names; _foo will be checked
no-docstring-rgx = "^__.*__$"


[tool.pydocstyle]
convention = "numpy"
add-ignore = []

[tool.codeanatomy.docstrings.policy]
coverage-threshold = 0.9
coverage-action = "error"
missing-params-action = "error"
missing-returns-action = "error"

[tool.cq.tree_sitter_codegen]
python-output = "tools/cq/search/generated/python_node_types_v1.py"
rust-output = "tools/cq/search/generated/rust_node_types_v1.py"
