[workspace]
resolver = "2"
members = [
    "datafusion_ext",
    "datafusion_ext_py",
    "datafusion_python",
    "df_plugin_api",
    "df_plugin_host",
    "df_plugin_codeanatomy",
]

[workspace.dependencies]
arrow = "57.1.0"
arrow-ipc = "57.1.0"
async-trait = "0.1"
blake2 = "0.10"
chrono = "0.4"
datafusion = { version = "51.0.0", default-features = false, features = ["parquet"] }
datafusion-catalog-listing = "51.0.0"
datafusion-common = "51.0.0"
datafusion-datasource = { version = "51.0.0", default-features = false }
datafusion-datasource-csv = { version = "51.0.0", default-features = false }
datafusion-datasource-parquet = { version = "51.0.0", default-features = false }
datafusion-doc = "51.0.0"
datafusion-expr = "51.0.0"
datafusion-expr-common = "51.0.0"
datafusion-ffi = "51.0.0"
datafusion-functions = "51.0.0"
datafusion-functions-aggregate = "51.0.0"
datafusion-functions-nested = "51.0.0"
datafusion-functions-table = "51.0.0"
datafusion-functions-window = "51.0.0"
datafusion-functions-window-common = "51.0.0"
datafusion-physical-expr-adapter = "51.0.0"
datafusion-physical-expr-common = "51.0.0"
datafusion-macros = "51.0.0"
object_store = "0.12.5"
pyo3 = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }

[profile.release]
lto = true
codegen-units = 1
