[workspace]
resolver = "2"
members = [
    "codeanatomy_engine",
    "codeanatomy_engine_py",
    "datafusion_ext",
    "datafusion_ext_py",
    "datafusion_python",
    "df_plugin_api",
    "df_plugin_common",
    "df_plugin_host",
    "df_plugin_codeanatomy",
]

[workspace.package]
description = "CodeAnatomy Rust crates for DataFusion and DeltaLake integration"
documentation = "https://github.com/paul-heyse/CodeAnatomy/tree/main/docs"
homepage = "https://github.com/paul-heyse/CodeAnatomy"
license = "UNLICENSED"
repository = "https://github.com/paul-heyse/CodeAnatomy"

[workspace.dependencies]
arrow = "57.1.0"
arrow-ipc = "57.1.0"
async-trait = "0.1"
blake2 = "0.10"
chrono = "0.4"
datafusion = { version = "51.0.0", default-features = false, features = ["parquet"] }
datafusion-catalog-listing = "51.0.0"
datafusion-common = "51.0.0"
datafusion-datasource = { version = "51.0.0", default-features = false }
datafusion-datasource-csv = { version = "51.0.0", default-features = false }
datafusion-datasource-parquet = { version = "51.0.0", default-features = false }
datafusion-doc = "51.0.0"
datafusion-expr = "51.0.0"
datafusion-expr-common = "51.0.0"
datafusion-ffi = "51.0.0"
datafusion-functions = "51.0.0"
datafusion-functions-aggregate = "51.0.0"
datafusion-functions-nested = "51.0.0"
datafusion-functions-table = "51.0.0"
datafusion-functions-window = "51.0.0"
datafusion-functions-window-common = "51.0.0"
datafusion-physical-expr-adapter = "51.0.0"
datafusion-physical-expr-common = "51.0.0"
datafusion-macros = "51.0.0"
datafusion-sql = "51.0.0"
datafusion-tracing = "51.0.0"
instrumented-object-store = "51.0.0"
object_store = "0.12.5"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["trace", "http-proto", "http-json", "grpc-tonic"] }
opentelemetry_sdk = "0.31.0"
pyo3 = "0.26"
pyo3-build-config = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = "0.3"
url = "2.5.4"

[profile.release]
lto = true
codegen-units = 1
