[package]
name = "codeanatomy-engine"
version = "0.1.0"
edition = "2021"
description.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "codeanatomy_engine"
crate-type = ["rlib"]

[dependencies]
# Workspace dependencies (pinned versions)
datafusion = { workspace = true, features = ["parquet"] }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-functions-aggregate = { workspace = true }
datafusion-sql = { workspace = true }
datafusion-tracing = { workspace = true, optional = true }
instrumented-object-store = { workspace = true, optional = true }
object_store = { workspace = true }
arrow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = "0.1"
tokio = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
url = { workspace = true }

# Local workspace crate — existing UDFs, Delta control plane, rules
datafusion_ext = { path = "../datafusion_ext" }

# Engine-specific dependencies
deltalake = { version = "0.31.0", features = ["datafusion"] }
blake3 = "1"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
prost = "0.14"

# Optional substrait support
datafusion-substrait = { version = "52.1.0", optional = true }
substrait = { version = "0.62", optional = true }

# Optional Delta codec support (plan serialization with extension codecs)
datafusion-proto = { version = "52.1.0", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"

[features]
default = ["compliance"]
compliance = []
substrait = ["dep:datafusion-substrait", "dep:substrait"]
tracing = [
    "dep:datafusion-tracing",
    "dep:instrumented-object-store",
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:tracing",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
]
delta-planner = []
delta-codec = ["dep:datafusion-proto"]
