[package]
name = "datafusion_ext"
version = "0.1.0"
edition = "2021"

[lib]
name = "datafusion_ext"
crate-type = ["cdylib", "rlib"]

[dependencies]
arrow = "57.1.0"
arrow-ipc = "57.1.0"
async-trait = "0.1"
blake2 = "0.10"
chrono = "0.4"
datafusion = { version = "51.0.0", default-features = false, features = ["parquet"] }
datafusion-catalog-listing = "51.0.0"
datafusion-common = "51.0.0"
datafusion-datasource = { version = "51.0.0", default-features = false }
datafusion-datasource-csv = { version = "51.0.0", default-features = false }
datafusion-datasource-parquet = { version = "51.0.0", default-features = false }
datafusion-doc = "51.0.0"
datafusion-expr = "51.0.0"
datafusion-ffi = "51.0.0"
datafusion-functions = "51.0.0"
datafusion-functions-aggregate = "51.0.0"
datafusion-functions-nested = "51.0.0"
datafusion-functions-table = "51.0.0"
datafusion-functions-window = "51.0.0"
datafusion-functions-window-common = "51.0.0"
datafusion-physical-expr-adapter = "51.0.0"
datafusion-physical-expr-common = "51.0.0"
datafusion-python = "51.0.0"
df_plugin_host = { path = "../df_plugin_host" }
deltalake = { version = "0.30.1", features = ["datafusion"] }
hex = "0.4"
pyo3 = { version = "0.26", features = ["extension-module"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }

[features]
default = []
async-udf = []
