[package]
name = "datafusion_ext"
version = "0.1.0"
edition = "2021"
description.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "datafusion_ext"
crate-type = ["rlib"]

[dependencies]
arrow = "57.1.0"
arrow-ipc = "57.1.0"
async-trait = "0.1"
base64 = "0.22"
blake2 = "0.10"
chrono = "0.4"
dashmap = "5.5.3"
datafusion = { version = "52.1.0", default-features = false, features = ["parquet"] }
datafusion-catalog-listing = "52.1.0"
datafusion-common = "52.1.0"
datafusion-datasource = { version = "52.1.0", default-features = false }
datafusion-datasource-csv = { version = "52.1.0", default-features = false }
datafusion-datasource-parquet = { version = "52.1.0", default-features = false }
datafusion-doc = "52.1.0"
datafusion-expr = "52.1.0"
datafusion-expr-common = "52.1.0"
datafusion-ffi = "52.1.0"
datafusion-functions = "52.1.0"
datafusion-functions-aggregate = "52.1.0"
datafusion-functions-nested = "52.1.0"
datafusion-functions-table = "52.1.0"
datafusion-functions-window = "52.1.0"
datafusion-functions-window-common = "52.1.0"
datafusion-physical-expr-adapter = "52.1.0"
datafusion-physical-expr-common = "52.1.0"
datafusion-macros = "52.1.0"
df_plugin_host = { path = "../df_plugin_host" }
deltalake = { version = "0.31.0", features = ["datafusion"] }
hex = "0.4"
object_store = "0.12.5"
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
tracing = { workspace = true }
unicode-normalization = "0.1"
url = "2"
urlencoding = "2"
pyo3 = { workspace = true, optional = true }

[features]
default = []
async-udf = []
python = ["dep:pyo3"]

[dev-dependencies]
parquet = { version = "57.1.0", features = ["arrow"] }
