[package]
name = "datafusion_ext_py"
version = "0.1.0"
edition = "2021"
description.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "datafusion_ext_py"
crate-type = ["cdylib", "rlib"]

[features]
default = ["substrait", "async-udf"]
async-udf = ["datafusion-python/async-udf"]
substrait = ["datafusion-python/substrait"]
protoc = ["datafusion-python/protoc"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
datafusion-python = { path = "../datafusion_python" }
