[build-system]
requires = ["maturin>=1.8.1"]
build-backend = "maturin"

[project]
name = "datafusion_ext"
version = "0.1.0"
description = "CodeAnatomy DataFusion extension module"
requires-python = ">=3.10"
dependencies = ["datafusion>=50.1.0"]

[tool.maturin]
module-name = "datafusion_ext"
include = [{ path = "plugin/**", format = "wheel" }]
locked = true
