[package]
name = "df_plugin_codeanatomy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
abi_stable = "0.11"
datafusion = { version = "51.0.0", default-features = false, features = ["parquet"] }
datafusion-ffi = "51.0.0"
deltalake = { version = "0.30.1", features = ["datafusion"] }
df_plugin_api = { path = "../df_plugin_api" }
datafusion_ext = { path = "../datafusion_ext" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }

[features]
async-udf = ["datafusion_ext/async-udf"]
