[package]
name = "df_plugin_host"
version = "0.1.0"
edition = "2021"
description.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
abi_stable = "0.11"
arrow = "57.1.0"
datafusion = { version = "51.0.0", default-features = false, features = ["parquet"] }
datafusion-expr = "51.0.0"
datafusion-ffi = "51.0.0"
deltalake = { version = "0.30.1", features = ["datafusion"] }
df_plugin_api = { path = "../df_plugin_api" }
df_plugin_common = { path = "../df_plugin_common" }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
